--- a/app/src/main/res/menu/activity_nav_bar_drawer.xml
+++ b/app/src/main/res/menu/activity_nav_bar_drawer.xml
@@ -6,18 +6,18 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_home_black_24dp"
+            android:icon="@drawable/ic_search_black_24dp"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_blog"
             android:icon="@drawable/blog"
             android:title="@string/menu_blog" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_gallery" />
         <item
-            android:id="@+id/nav_tools"
+            android:id="@+id/nav_about"
             android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
             android:title="@string/menu_about" />
     </group>
